kubernetes/c4-order.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: c4-order
    labels:
      app: c4-order
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: c4-order
- apiVersion: v1
  kind: ConfigMap
  metadata:
    name: c4-order-env
    labels:
      app: c4-order
  data:
    AMQP_URI: "amqp://guest:guest@rabbitmq:5672"
    MONGO_ADDRS: "mongodb.database.svc.cluster.local"
    PORT: "8080"
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: c4-order
    labels:
      version: v1
      app: c4-order
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          version: v1
          app: c4-order
      spec:
        containers:
        - name: c4-order
          image: fernandocagale/c4-order
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
- apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: c4-order-virtual-service
  spec:
    hosts:
    - "*"
    gateways:
    - application-gateway-c4
    http:
    - match:
      - uri:
          prefix: /order
      route:
      - destination:
          host: c4-order
          port:
            number: 8080
